# file-system-zome

./: .gitignore  Cargo.toml  README.md  flake.nix  package-lock.json  package.json  specifications.md
.github/workflows/: test.yaml
dnas/file_storage/workdir/: dna.yaml
dnas/file_storage/zomes/coordinator/file_storage/: Cargo.toml
dnas/file_storage/zomes/coordinator/file_storage/src/: files.rs  lib.rs
dnas/file_storage/zomes/integrity/file_storage/: Cargo.toml
dnas/file_storage/zomes/integrity/file_storage/src/: lib.rs
dnas/file_system/workdir/: dna.yaml
dnas/file_system/zomes/coordinator/file_system/: Cargo.toml
dnas/file_system/zomes/coordinator/file_system/src/: files.rs  lib.rs  signals.rs
dnas/file_system/zomes/integrity/file_system/: Cargo.toml
dnas/file_system/zomes/integrity/file_system/src/: lib.rs
doc/: specifications.md
file-watcher/: Cargo.toml  config.toml  exercice.md  files.json  readme.md
file-watcher/src/: daemon.rs  file.rs  main.rs  monitor.rs
tests/: package.json
tests/src/file_storage/file/: common.ts  file.test.ts
tests/src/file_system/: common.ts  file.test.ts  file_system.test.ts
ui/: tsconfig.json
ui/src/: App.svelte  app.css
ui/src/todos/todos/: CreateTodoItem.svelte  EditTodoItem.svelte  TodoItemDetail.svelte  types.ts
workdir/: happ.yaml  web-happ.yaml
