[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = "=0.2.2"
hdk = "0.1.2"
holochain_integrity_types = "=0.1.2"
serde = "1"

[workspace.dependencies.file_system]
path = "dnas/file_system/zomes/coordinator/file_system"

[workspace.dependencies.file_system_integrity]
path = "dnas/file_system/zomes/integrity/file_system"
