[package]
name = "file-watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "5.1.0"
notify-debouncer-mini = "0.2.1"
log = "0.4.17"
daemonize = "0.5.0"
clap = { version = "4.2.1", features = ["derive"] }
toml = "0.7.3"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
walkdir = "2.3.3"
thiserror = "1.0.40"
