[package]
name = "file-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
notify = "5.1.0"
notify-debouncer-mini = "0.2.1"
log = "0.4.17"
daemonize = "0.5.0"
clap = { version = "4.2.1", features = ["derive"] }
toml = "0.7.3"
serde = { workspace = true }
serde_json = { workspace = true }
walkdir = "2.3.3"
thiserror = "1.0.40"
