[package]
name = "file_storage"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "file_storage"

[dependencies]
hdk = { workspace = true }
holochain_integrity_types = { workspace = true }

serde = { workspace = true }
chrono = { workspace = true }

file_storage_integrity = { workspace = true }
