[package]
name = "file_storage"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "file_storage"

[dependencies]
regex = "1.8.1"
hdk = { workspace = true }
holochain_integrity_types = { workspace = true }

serde = { workspace = true }

file_storage_integrity = { workspace = true }
