[package]
name = "file_system"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "file_system"

[dependencies]
regex = "1.8.1"
hdk = { workspace = true }
holochain_integrity_types = { workspace = true }

serde = { workspace = true }

file_system_integrity = { workspace = true }
